fixed text alignment and button styling across muliple css files

--- a/frontend/src/css/LandingPage.css
+++ b/frontend/src/css/LandingPage.css
@@ -2,44 +2,53 @@
     width: 100vw;
     height: 100vh;
     text-align: center;
-    /* grid-column: 1/ -1;
-    grid-template-rows: 50px repeat(2,1fr);
-    display: grid;
-    grid-gap:5px;
-    grid-template-columns: repeat(6,1fr); */
-    /* background-color: lightgray; */
 }
 
 .btn:link,
 .btn:visited {
-    /* background-color: #fff; */
-    text-decoration: none;
     text-transform: uppercase;
+    text-decoration: none;
     padding: 10px 60px;
+    display: inline-block;
     margin-top: 10px;
     border-radius: 100px;
     transition: all .2s;
+    position: relative;
 }
 
 .btn:hover {
-    transform: translateY(-3px);
-    box-shadow: 5px 5px 20px rgba(135, 205, 250, .4);
+    /* transform: translateY(-3px); */
+    /* box-shadow: 5px 5px 40px rgba(135, 205, 250, .9); */
 }
 
-.btn:active {
-    transform: translateY(-1px);
-    box-shadow: 2px 2px 20px rgba(135, 205, 250, .75);
+.btn:active{
+    /* transform: translateY(-1px); */
+    /* box-shadow: 5px 5px 40px rgba(135, 205, 250, .2); */
 }
 
-.btn-wht {
-    background-color: black;
-    color: white;
+.btn-white {
+    background-color: white;
+    color: #777;
 }
 
-/* .btn::after{
-    
+.btn::after{
+    content: "";
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    border-radius: 100px;
+    position: absolute;
+    top:0;
+    left:0;
+    z-index: -1;
+    transition: all .4s;
 }
 
-.btn-wht::after{
-    
-} */
+.btn-white::after{
+    background-color:white;
+}
+
+.btn:hover::after{
+    transform: scaleX(1.4) scaleY(1.6);
+    opacity: 0;
+}
